--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>TODO App</title>
+
+    <link type="text/css" rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="todo-app">
@@ -13,13 +15,13 @@
     <main class="todo-app__frame">
         <section class="todo-app__main-controls main-controls">
             <div class="main-controls__select-all">
-                <button class="main-controls__select-all-button" aria-label="Select all jobs">
-                    <img src="images/icons/select-all.png" alt="Select all jobs">
+                <button class="main-controls__select-all-button">
+                    Select all jobs
                 </button>
             </div>
-            <div class="main-controls__create-new">
-                <input id="main-controls__create-new-input" placeholder="What needs to be done?" type="text" autofocus="autofocus"
-                       aria-label="Input job to add">
+            <div class="main-controls__create-new-task">
+                <input class="main-controls__create-new-task-input" placeholder="What needs to be done?" type="text" autofocus="autofocus"
+                       aria-label="Input task to add">
             </div>
         </section>
 
@@ -27,9 +29,13 @@
             <ul class="tasks__task-list task-list">
                 <li class="task-list__task-item task-item">
                     <div class="task-item__view">
-                        <input type="checkbox" class="task-item__status" aria-label="Active task: HTML">
+                        <input id="html" type="checkbox" class="task-item__status-checkbox">
+                        <label for="html" class="task-item__status-label" aria-label="Active task: HTML"></label>
+
                         <span class="task-item__text">HTML</span>
-                        <button class="task-item__delete-button">Delete task</button>
+                        <button class="task-item__delete-button">
+                            Delete task
+                        </button>
                     </div>
                     <div class="task-item__edit" hidden="hidden">
                         <input type="text" class="task-item__input" value="HTML" aria-label="Edit task: HTML">
@@ -37,9 +43,13 @@
                 </li>
                 <li class="task-list__task-item task-item">
                     <div class="task-item__view">
-                        <input type="checkbox" class="task-item__status" aria-label="Completed task: CSS">
+                        <input id="css" type="checkbox" class="task-item__status-checkbox" checked="checked">
+                        <label for="css" class="task-item__status-label" aria-label="Completed task: CSS"></label>
+
                         <span class="task-item__text">CSS</span>
-                        <button class="task-item__delete-button">Delete task</button>
+                        <button class="task-item__delete-button">
+                            Delete task
+                        </button>
                     </div>
                     <div class="task-item__edit" hidden="hidden">
                         <input type="text" class="task-item__input" value="CSS" aria-label="Edit task: CSS">
@@ -47,9 +57,13 @@
                 </li>
                 <li class="task-list__task-item task-item">
                     <div class="task-item__view">
-                        <input type="checkbox" class="task-item__status" aria-label="Active task: JS">
+                        <input id="js" type="checkbox" class="task-item__status-checkbox">
+                        <label for="js" class="task-item__status-label" aria-label="Active task: JS"></label>
+
                         <span class="task-item__text">JS</span>
-                        <button class="task-item__delete-button">Delete task</button>
+                        <button class="task-item__delete-button">
+                            Delete task
+                        </button>
                     </div>
                     <div class="task-item__edit" hidden="hidden">
                         <input type="text" class="task-item__input" value="JS" aria-label="Edit task: JS">
@@ -57,9 +71,13 @@
                 </li>
                 <li class="task-list__task-item task-item">
                     <div class="task-item__view">
-                        <input type="checkbox" class="task-item__status" aria-label="Active task: JS tools">
+                        <input id="js-tools" type="checkbox" class="task-item__status-checkbox">
+                        <label for="js-tools" class="task-item__status-label" aria-label="Active task: JS tools"></label>
+
                         <span class="task-item__text">JS tools</span>
-                        <button class="task-item__delete-button">Delete task</button>
+                        <button class="task-item__delete-button">
+                            Delete task
+                        </button>
                     </div>
                     <div class="task-item__edit" hidden="hidden">
                         <input type="text" class="task-item__input" value="JS tools" aria-label="Edit task: JS tools">
@@ -69,28 +87,26 @@
         </section>
 
         <section class="todo-app__actions-bar actions-bar">
-            <div class="actions-bar-item">
+            <div class="actions-bar__item">
                 <div class="task-counter">
                     <span>3 items left</span>
                 </div>
             </div>
-            <div class="actions-bar-item">
+            <div class="actions-bar__item">
                 <div class="task-filter" role="group" aria-label="Filter tasks by status">
-                    <label class="task-filter__item">
-                        <input type="radio" class="task-filter__input" name="filter" checked="checked" value="All"/>
-                        <span class="task-filter__text" aria-label="Select all tasks">All</span>
-                    </label>
-                    <label class="task-filter__item">
-                        <input type="radio" class="task-filter__input" name="filter" value="Active"/>
-                        <span class="task-filter__text" aria-label="Select active tasks">Active</span>
-                    </label>
-                    <label class="task-filter__item">
-                        <input type="radio" class="task-filter__input" name="filter" value="Completed"/>
-                        <span class="task-filter__text" aria-label="Select completed tasks">Completed</span>
-                    </label>
+                    <input id="task-filter__all-filter" type="radio" class="task-filter__input" name="filter" checked="checked"
+                           value="All"/>
+                    <label for="task-filter__all-filter" class="task-filter__label" aria-label="Select all tasks">All</label>
+
+                    <input id="task-filter__active-filter" type="radio" class="task-filter__input" name="filter" value="Active"/>
+                    <label for="task-filter__active-filter" class="task-filter__label" aria-label="Select active tasks">Active</label>
+
+                    <input id="task-filter__completed-filter" type="radio" class="task-filter__input" name="filter" value="Completed"/>
+                    <label for="task-filter__completed-filter" class="task-filter__label"
+                           aria-label="Select completed tasks">Completed</label>
                 </div>
             </div>
-            <div class="actions-bar-item">
+            <div class="actions-bar__item">
                 <div class="clear-completed">
                     <button class="clear-completed-button" aria-label="Clear completed tasks">Clear completed</button>
                 </div>
